[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menus/MainMenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menus/Lobby.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Menus/Assets/Buttons/Start_Button_Pressed.png" type="Texture" id=4]
[ext_resource path="res://Menus/Assets/Buttons/Start_Button_Normal.png" type="Texture" id=5]
[ext_resource path="res://Menus/Assets/Buttons/Start_Button_Hover.png" type="Texture" id=6]
[ext_resource path="res://Menus/Assets/Buttons/Back_Button_Normal.png" type="Texture" id=7]
[ext_resource path="res://Menus/Assets/Buttons/Back_Button_Hover.png" type="Texture" id=8]
[ext_resource path="res://Menus/Assets/Buttons/Back_Button_Pressed.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Lora/Lora-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 239.0
margin_top = 20.0
margin_right = 785.0
margin_bottom = 580.0
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 546.0
margin_bottom = 93.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 328.0
margin_bottom = 88.0
theme = ExtResource( 1 )
text = "LOBBY ID: "

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 332.0
margin_right = 546.0
margin_bottom = 93.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_left = 165.0
margin_top = 97.0
margin_right = 381.0
margin_bottom = 180.0
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "Players"
align = 1

[node name="PlayersList" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_left = 73.0
margin_top = 184.0
margin_right = 473.0
margin_bottom = 560.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 6
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
items = [ "Hello", ExtResource( 3 ), false ]
same_column_width = true

[node name="StartButton" type="TextureButton" parent="MarginContainer"]
margin_left = 754.0
margin_top = 270.0
margin_right = 1004.0
margin_bottom = 330.0
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )

[node name="BackButton" type="TextureButton" parent="MarginContainer"]
margin_left = 20.0
margin_top = 520.0
margin_right = 270.0
margin_bottom = 580.0
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )

[connection signal="pressed" from="MarginContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_BackButton_pressed"]
